<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.fragments.CalculatorFragment">


    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintBottom_toBottomOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.15" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_calculator_main_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/fragment_background"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/view"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_top"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.2" />

        <TextView
            android:id="@+id/tv_select_product_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/custom_text_input3"
            android:drawableEnd="@drawable/ic_arrow_down"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:gravity="center"
            android:hint="@string/product_name_hint"
            android:importantForAutofill="no"
            android:singleLine="true"
            android:textColor="@color/secondaryTextColor"
            android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@+id/guideline_top" />

        <LinearLayout
            android:id="@+id/ll_production_costs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:orientation="horizontal"
            android:weightSum="2"
            app:layout_constraintTop_toBottomOf="@+id/tv_select_product_name">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/production_cost"
                android:textSize="14sp">

            </TextView>

            <EditText
                android:id="@+id/et_production_costs"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/custom_text_input"
                android:gravity="start|center"
                android:importantForAutofill="no"
                android:inputType="numberDecimal"
                android:singleLine="true"
                android:textColor="@color/secondaryTextColor"
                android:textSize="16sp"
                app:layout_constraintTop_toBottomOf="@+id/tv_select_product_name" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_calculator_all_values"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@+id/ll_production_costs">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="4">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/composition"
                    android:textColor="@color/grey_500"
                    android:textSize="12sp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:text="@string/composition_with_production_cost"
                    android:textColor="@color/grey_500"
                    android:textSize="12sp" />


                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/p_cost"
                    android:textColor="@color/grey_500"
                    android:textSize="12sp" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal"
                android:weightSum="4">

                <TextView
                    android:id="@+id/tv_calculate_receipt"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/_0_0dz"
                    android:textColor="@color/dark_blue"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/tv_calculate_receipt_with_production_cost"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:text="@string/_0_0dz"
                    android:textColor="@color/dark_blue"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/tv_calculate_production_cost"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/_0_0dz"
                    android:textColor="@color/dark_blue"
                    android:textSize="18sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:orientation="horizontal"
                android:weightSum="4">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/discount"
                    android:textColor="@color/grey_500"
                    android:textSize="12sp" />


                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:text="@string/price"
                    android:textColor="@color/grey_500"
                    android:textSize="14sp" />


                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/profit"
                    android:textColor="@color/grey_500"
                    android:textSize="12sp" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal"
                android:weightSum="4">


                <TextView
                    android:id="@+id/tv_calculate_discount"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/_0_0dz"
                    android:textColor="@color/discount"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tv_calculate_price"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:text="@string/_0_0dz"
                    android:textColor="@color/black"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_calculate_profit"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/_0_0dz"
                    android:textColor="@color/profit_ratio"
                    android:textSize="16sp" />


            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_seekbars_layout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_weight="3"
            android:gravity="top"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@+id/tv_note"
            app:layout_constraintTop_toBottomOf="@+id/ll_calculator_all_values">

            <com.akaita.android.circularseekbar.CircularSeekBar
                android:id="@+id/sb_discount"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:layout_weight="1"
                app:innerCircleColor="@color/white"
                app:max="100"
                app:min="0"
                app:progressTextColor="@color/white"
                app:progressTextSize="30"
                app:ringColor="@color/discount"
                app:ringWidth="0.4"
                app:showIndicator="true"
                app:showInnerCircle="true"
                app:speedMultiplier="0.2" />

            <com.akaita.android.circularseekbar.CircularSeekBar
                android:id="@+id/sb_profit_ratio"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="bottom"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:alpha="1"
                app:innerCircleColor="@color/white"
                app:max="100"
                app:min="0"
                app:progressTextColor="@color/white"
                app:progressTextSize="30"
                app:ringColor="@color/profit_ratio"
                app:ringWidth="0.4"
                app:showIndicator="true"
                app:showInnerCircle="true"
                app:speedMultiplier="0.2" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_seekbar_names"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="2"
            app:layout_constraintBottom_toTopOf="@+id/tv_note"
            app:layout_constraintTop_toBottomOf="@+id/ll_calculator_all_values">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/discount"
                android:textColor="@color/grey_500"
                android:textSize="12sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/profit_ratio"
                android:textColor="@color/grey_500"
                android:textSize="12sp" />

        </LinearLayout>

        <TextView
            android:id="@+id/tv_note"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:text="@string/calculator_note"
            android:textColor="@color/secondaryColor"
            android:textSize="13sp"
            app:layout_constraintBottom_toBottomOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/iv_small_back_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/back_image"
        android:scaleType="fitXY"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@id/guide"
        app:srcCompat="@drawable/extra_back" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="visible"
        android:weightSum="10"
        app:layout_constraintBottom_toTopOf="@id/view"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/iv_back_image"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="12"
            android:contentDescription="@string/back_image"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/extra_back" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/ll_app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/playfair_display_bold"
            android:gravity="center"
            android:letterSpacing="0.27"
            android:text="@string/app_name_string1"
            android:textColor="@color/white"
            android:textSize="@dimen/_24sdp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/playfair_display_bold"
            android:gravity="center"
            android:letterSpacing="0.27"
            android:text="@string/app_name_string2"
            android:textColor="@color/white"
            android:textSize="@dimen/_24sdp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/playfair_display_bold"
            android:gravity="center"
            android:letterSpacing="0.27"
            android:text="@string/app_name_string3"
            android:textColor="@color/white"
            android:textSize="@dimen/_24sdp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/backLL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="@dimen/_18sdp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name_string_small"
            android:textColor="@color/white"
            android:textSize="@dimen/_10sdp" />


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>