<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:alpha="0.9"
    app:cardCornerRadius="2dp"
    app:cardElevation="1dp"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="10">

        <TextView
            android:id="@+id/tv_ifl_extra_name2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="6"
            android:background="@drawable/custom_text_input2"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:gravity="start|center"
            android:hint="@string/extra_name_hint"
            android:importantForAutofill="no"
            android:inputType="text"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/et_inf_extra_quantity2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:background="@android:color/transparent"
            android:gravity="start|center"
            android:hint="@string/quantity_hint"
            android:importantForAutofill="no"
            android:inputType="numberDecimal"
            android:paddingStart="8dp"
            android:paddingEnd="0dp"
            android:singleLine="true"
            android:textColor="@color/primaryColor"
            android:textColorHint="#5555"
            android:textSize="16sp" />

        <ImageButton
            android:id="@+id/ib_ifl_extra_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:contentDescription="@string/cancel"
            android:gravity="center"
            android:tint="#FF3D00"
            app:srcCompat="@drawable/ic_close"

            />


    </LinearLayout>
</androidx.cardview.widget.CardView>
